# cpp2c

./: README.md  Setup.hs  cpp2hs.cabal  libPoint.dylib
cppbits/: Point.cpp  Point.h
src/Foreign/Cpp/: Point.hs
test/: PointSpec.hs
test/Foreign/Cpp/: PointTest.hs
